2008-10-30  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_bipartite_projection) : rewritten
	* examples/simple/igraph_bipartite_projection.c : added

	* src/structure_generators.c (igraph_full_bipartite) : bug fixed,
	types vector was not set up correctly

2008-10-28  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_bipartite_projection) : added

2008-10-27  Gabor Csardi  <csardi@szaffi>

	* src/structure_generators.c (igraph_full_bipartite) : bug fixed

	* src/structure_generators.c (igraph_full_bipartite) : added

	* src/structural_properties.c
	(igraph_avg_nearest_neighbor_degree) : 'weights' argument added

	* src/structural_properties.c (igraph_strength) : added

	* src/structural_properties.c 
	(igraph_avg_nearest_neighbor_degree) : added

2008-10-24  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_paths_johnson) : added

2008-10-01  Gabor Csardi  <csardi@szaffi>

	* src/blicc.cc (igraph_automorphisms) : fixed a memory leak

2008-09-29  Gabor Csardi  <csardi@szaffi>

	* src/type_indexededgelist.c (igraph_get_eids) : rewritten to
	use binary search. In practice it is faster only if we search 
	for adjacent edges of high-degree vertices frequently
	* examples/simple/igraph_get_eids.c : added

2008-09-26  Gabor Csardi  <csardi@szaffi>

	* src/basic_query.c (igraph_are_connected) : speeded up by using 
	the new igraph_get_eid2

	* src/type_indexededgelist.c (igraph_get_eid2) : added, 
	the same as igraph_get_eid, but does not fail if the edge
	is not in the graph; instead it returns a negative value in eid

2008-09-11  Gabor Csardi  <csardi@szaffi>

	* src/gengraph_mr-connected.cpp (igraph_degree_sequence_game_vl) :
	check that the sum of degree is even

2008-09-06  Gabor Csardi  <csardi@szaffi>

	* src/topology.c (igraph_isomorphic_function_vf2) : bug corrected

2008-09-11  Gabor Csardi  <csardi@szaffi>

	* src/gengraph_mr-connected.cpp (igraph_degree_sequence_game_vl) :
	check that the sum of degree is even
