@@ -11,7 +11,11 @@
 <!-- doxrox-include about_bipartite -->
 </section>
 
-<section><title>Projecting a two-mode graphs</title>
+<section><title>Create two-mode networks</title>
+<!-- doxrox-include igraph_full_bipartite -->
+</section>
+
+<section><title>Project a two-mode graphs</title>
 <!-- doxrox-include igraph_bipartite_projection -->
 </section>
 
